--- a/src/Layouts/MainLayout/index.css
+++ b/src/Layouts/MainLayout/index.css
@@ -1,31 +1,111 @@
 .Main_Layout_Container{
     border: 1px solid red;
+    background-color: red;
     display: flex;
+    flex-direction: column;
     width: 100%;
     /* height: 100vh; */
+
     aside{
-        border: 1px solid orange;
-        width: 400px;
+        background-color: aqua;
+        display: grid;
+        align-items: center;
+        justify-content: space-around;
+        /* border: 1px solid orange; */
+        /* width: 400px; */
     }
 
     main{
         border: 1px solid blue;
-        width: 100%;
+        background-color: blue;
+        /* max-width: 100%; */
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-columns: repeat(4, 1fr); */
         gap: 20px;
-        /* padding: 5px; */
+        padding: 20px;
     }
 }
+
+@media screen and (max-width:600px) {
+
+    .Main_Layout_Container{
+
+    main{
+        grid-template-columns: 1fr;
+
+    }
+    aside{
+        grid-template-columns: 1fr;
+    }
+    
+}
+}
+
+@media screen and (min-width:601px) and (max-width:900px) {
+
+    .Main_Layout_Container{
+
+    main{
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+    aside{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+}
+
+
+@media screen and (min-width:901px) and (max-width:1100px) {
+
+    .Main_Layout_Container{
+
+    main{
+        grid-template-columns:repeat(3, 1fr);
+
+    }
+    aside{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+}
+
+@media screen and (min-width:1101px)  {
+
+    .Main_Layout_Container{
+
+    main{
+        grid-template-columns:repeat(4, 1fr);
+
+    }
+    aside{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+}
+
+
 
 
 .Content{
     border: 1px solid green;
+    background-color: green;
     padding: 30px 0;
-    width: 100%;
+    /* width: 100%; */
 }
 
+
+
+
+
+
+
+
+
+
+
 .filterItem{
+    width: 100%;
     border: 1px solid red;
 
     ul{
@@ -33,9 +113,4 @@
   padding: 0;
   margin: 0;
     }
-}
-
-.pricer{
-    border: 1px solid red;
-    /* width: 50%; */
 }
