--- a/src/Layouts/MainLayout/index.css
+++ b/src/Layouts/MainLayout/index.css
@@ -6,11 +6,12 @@
     width: 100%;
     /* height: 100vh; */
 
-    aside{
+    .aside{
         background-color: aqua;
         display: grid;
         align-items: center;
         justify-content: space-around;
+        transition: width 0.3s ease;
         /* border: 1px solid orange; */
         /* width: 400px; */
     }
@@ -34,7 +35,7 @@
         grid-template-columns: 1fr;
 
     }
-    aside{
+    .aside{
         grid-template-columns: 1fr;
     }
     
@@ -49,7 +50,7 @@
         grid-template-columns: repeat(2, 1fr);
 
     }
-    aside{
+    .aside{
         grid-template-columns: repeat(2, 1fr);
     }
 }
@@ -64,7 +65,7 @@
         grid-template-columns:repeat(3, 1fr);
 
     }
-    aside{
+    .aside{
         grid-template-columns: repeat(3, 1fr);
     }
 }
@@ -78,7 +79,7 @@
         grid-template-columns:repeat(4, 1fr);
 
     }
-    aside{
+    .aside{
         grid-template-columns: repeat(4, 1fr);
     }
 }
